k8s/minikube/ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ms-service
  name: ms-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    name: ms-pod
